# xbuild

./: Cargo.toml
apk/: Cargo.toml
apk/src/: lib.rs  manifest.rs  sign.rs
apk/src/compiler/: attributes.rs  table.rs
appbundle/: Cargo.toml
appbundle/src/: lib.rs
appimage/: Cargo.toml
msix/: Cargo.toml
msix/src/: block_map.rs  content_types.rs  lib.rs  manifest.rs  p7x.rs  pkcs7.rs
mvn/: Cargo.toml
mvn/src/: lib.rs
pri/: Cargo.toml
pri/src/: data_item.rs  decision_info.rs  hierarchical_schema.rs  lib.rs  pri_descriptor.rs  resource_map.rs
xbuild/: Cargo.toml
xbuild/src/: config.rs  download.rs  lib.rs  main.rs  task.rs
xbuild/src/cargo/: config.rs  mod.rs  utils.rs
xbuild/src/command/: build.rs
xbuild/src/devices/: adb.rs
xbuild/src/gradle/: mod.rs
xbuild/template/: Cargo_toml  lib.rs
xcommon/: Cargo.toml
xcommon/src/: lib.rs  llvm.rs
