[package]
name = "apk"
version = "0.4.0"
edition = "2024"
description = "Library for creating and signing apks."
repository = "https://github.com/rust-mobile/xbuild"
license = "Apache-2.0 OR MIT"

[dependencies]
xcommon.workspace = true
anyhow.workspace = true
byteorder.workspace = true
quick-xml.workspace = true
rasn.workspace = true
rasn-pkix.workspace = true
roxmltree.workspace = true
rsa.workspace = true
serde.workspace = true
sha2.workspace = true
tracing.workspace = true
zip.workspace = true

[dev-dependencies]
tracing-log.workspace = true
tracing-subscriber.workspace = true
