[package]
name = "appbundle"
version = "0.3.0"
edition = "2021"
description = "Library for creating and signing appbundles."
repository = "https://github.com/rust-mobile/xbuild"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow.workspace = true
apple-codesign.workspace = true
app-store-connect.workspace = true
icns.workspace = true
log.workspace = true
pkcs8.workspace = true
plist.workspace = true
rasn.workspace = true
rasn-cms.workspace = true
serde.workspace = true
x509-certificate.workspace = true
xcommon.workspace = true
