[package]
name = "msix"
version = "0.4.0"
edition = "2024"
description = "Library for creating and signing msix packages."
repository = "https://github.com/rust-mobile/xbuild"
license = "Apache-2.0 OR MIT"

[dependencies]
xcommon.workspace = true
anyhow.workspace = true
base64.workspace = true
byteorder.workspace = true
mime_guess = "2.0.4"
quick-xml.workspace = true
rasn.workspace = true
rasn-cms.workspace = true
rasn-pkix.workspace = true
serde.workspace = true
sha2.workspace = true
zip.workspace = true

[dev-dependencies]
der-parser.workspace = true
rsa.workspace = true
