[package]
name = "mvn"
version = "0.2.0"
edition = "2021"
description = "Library for fetching and resolving maven dependencies."
repository = "https://github.com/rust-mobile/xbuild"
license = "Apache-2.0 OR MIT"

[dependencies]
xcommon.workspace = true
anyhow.workspace = true
log.workspace = true
pubgrub.workspace = true
quick-xml.workspace = true
serde.workspace = true
