[package]
name = "xbuild"
version = "0.2.0"
edition = "2024"
description = "Builds rust mobile/desktop projects."
repository = "https://github.com/rust-mobile/xbuild"
license = "Apache-2.0 OR MIT"

[dependencies]
# local
apk.workspace = true
appbundle.workspace = true
appimage.workspace = true
msix.workspace = true
mvn.workspace = true
xcommon.workspace = true

android-sdkmanager-rs.workspace = true
anyhow.workspace = true
apple-dmg.workspace = true
app-store-connect.workspace = true
base64.workspace = true
clap.workspace = true
console.workspace = true
dirs.workspace = true
dunce.workspace = true
futures.workspace = true
glob.workspace = true
indicatif.workspace = true
log.workspace = true
log-panics.workspace = true
path-slash.workspace = true
plist.workspace = true
quick-xml.workspace = true
reqwest = { workspace = true, features = ["blocking", "rustls"] }
serde.workspace = true
serde_yaml.workspace = true
shlex.workspace = true
symlink.workspace = true
tar.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
which.workspace = true
zip.workspace = true
zstd .workspace = true

[[bin]]
name = "x"
path = "src/main.rs"
