[package]
name = "xcommon"
version = "0.3.0"
edition = "2024"
description = "Utilities for x."
repository = "https://github.com/rust-mobile/xbuild"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow.workspace = true
byteorder.workspace = true
dunce.workspace = true
image = { workspace = true, features = ["png", "webp"] }
pem.workspace = true
rasn.workspace = true
rasn-pkix.workspace = true
rsa.workspace = true
sha2.workspace = true
zip = { workspace = true, features = ["deflate"] }
